src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountEmail__c</fullName>
        <description>Email associated with non-person accounts</description>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AccountPIDM__c</fullName>
        <description>Reference field to Account.PIDM__c for S2S Integration purposes, differentiating from Account.PIDM__pc for mapping purposes.</description>
        <formula>PIDM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountPIDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountS2SRecordType__c</fullName>
        <description>Forumla Field for pushing RecordType Name to Student API org</description>
        <formula>RecordType.DeveloperName</formula>
        <label>AccountS2SRecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSFId__c</fullName>
        <description>SF ID reference field for S2S Integration</description>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountSFId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveDiscount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AlternatePhoneExtension__c</fullName>
        <label>Alternate Phone Extension</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternatePhoneNumber__c</fullName>
        <label>Alternate Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AmericanIndianAlaskanNativeStudents__c</fullName>
        <label>American Indian/ Alaskan Native Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicationWaiver__c</fullName>
        <label>Application Waiver</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticulationException__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this institution have exception transfer credits with WGU?</inlineHelpText>
        <label>Articulation Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Articulation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Articulation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AsianPacificIslanderStudents__c</fullName>
        <label>Asian/Pacific Islander Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSelfService_Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SelfService Theme</label>
        <referenceTo>BMCServiceDesk__SelfService_Theme__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKUrgency</label>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Remedyforce_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServiceProvider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceProvider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__costCenter__c</fullName>
        <label>Cost Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BannerId__c</fullName>
        <description>Banner ID for the Institution of Higher Ed</description>
        <inlineHelpText>Banner ID for the Institution of Higher Ed</inlineHelpText>
        <label>Banner Id</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlackStudents__c</fullName>
        <label>Black Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSSearchDate__c</fullName>
        <description>Date of CS search</description>
        <inlineHelpText>Date of the Clinical Supervisor (CS) search</inlineHelpText>
        <label>CS Search Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CharterSchool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charter School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Shipping county of account</description>
        <label>County</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentUserIsMentor__c</fullName>
        <description>Checks the current logged in user and compares it to the student&apos;s mentor. If the PIDM is the same, the field is &apos;True,&apos; if not it returns &apos;False.&apos;</description>
        <formula>IF($User.PIDM__c  =  StudentContact__r.Mentor__r.PIDM__c,&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Current User Is Mentor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Discount Amount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DistrictClosedVerifiedDate__c</fullName>
        <description>Closed Districts will not accept WGU students for student teaching/demonstration teaching in their district at this time. This date is the last date verified that they are still not accepting WGU students.</description>
        <inlineHelpText>Date WGU verified that the District will not place our students for Demonstration Teaching.</inlineHelpText>
        <label>District Closed Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DistrictPlacementPCE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>District Placement PCE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DistrictType__c</fullName>
        <label>District Type</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExemptionCode__c</fullName>
        <label>Exemption Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoLoc__c</fullName>
        <description>The Geolocation of the account</description>
        <inlineHelpText>Latitude and Longitude of the address</inlineHelpText>
        <label>GeoLoc</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>GroupCode__c</fullName>
        <label>Group Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HEAccreditationOrganization__c</fullName>
        <label>HE Accreditation Organization</label>
        <picklist>
            <controllingField>HEAccreditationType__c</controllingField>
            <picklistValues>
                <fullName>AARTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABHE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DETC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSCHE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NACCAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCA-CASI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCA-HLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NLNAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NWCCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYSBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WASC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HEAccreditationType__c</fullName>
        <description>The Type of Accreditation that the school of higher education has</description>
        <inlineHelpText>The Type of Accreditation that the school of higher education has</inlineHelpText>
        <label>HE Accreditation Type</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diploma</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HighGrade__c</fullName>
        <label>High Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Prekindergarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kindergarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Students Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HispanicStudents__c</fullName>
        <label>Hispanic Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPED__c</fullName>
        <externalId>true</externalId>
        <label>IPED</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstitutionAlias__c</fullName>
        <label>Institution Alias&apos;</label>
        <length>550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InstitutionCounty__c</fullName>
        <label>Institution County</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCSSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>School CS search status</description>
        <inlineHelpText>Is this record Clinical Supervisor (CS) search?</inlineHelpText>
        <label>Is CS Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsContractOnFile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the contract on file</description>
        <label>Is Contract On File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether or not a contract is needed</description>
        <label>Is Contract Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGuestPlacement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>School guest placement check</description>
        <label>Is Guest Placement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPublicOrPrivate__c</fullName>
        <label>Is Public Or Private</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWGUPlacementRequired__c</fullName>
        <formula>IF( ISPICKVAL( PlacementContactType__c, &quot;WGU Placement&quot; ), &quot;true&quot;, &quot;false&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is WGU Placement Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <description>Locale code of school</description>
        <inlineHelpText>Locale code of school</inlineHelpText>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>11-City: Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-City: Mid-size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13-City: Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-Suburb: Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22-Suburb: Mid-size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23-Suburb: Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-Town: Fringe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32-Town: Distant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33-Town: Remote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41-Rural: Fringe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42-Rural: Distant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43-Rural: Remote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LowGrade__c</fullName>
        <label>Low Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Prekindergarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kindergarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Students Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MagnetSchool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Magnet School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCESCode__c</fullName>
        <externalId>true</externalId>
        <label>NCES Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberDiscountedTerms__c</fullName>
        <label>Number of Discounted Terms</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberOfSchools__c</fullName>
        <description>Number of schools within the district</description>
        <inlineHelpText>How many total schools are in the district?</inlineHelpText>
        <label>Number Of Schools</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OPEID__c</fullName>
        <description>IPED for the Institutions of Higher Ed</description>
        <inlineHelpText>IPED for the Institutions of Higher Ed</inlineHelpText>
        <label>OPEID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCEPlacementPreviousUse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCE Placement school previous use flag</description>
        <inlineHelpText>Has Pre-Clinical Experiences (PCE) placement previously used this record?</inlineHelpText>
        <label>PCE Placement Previous Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <description>The PIDM which is unique in the WGU global scheme</description>
        <externalId>true</externalId>
        <label>PIDM</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PersonContactId__c</fullName>
        <description>Formula reference to StudentContact__c field, should return the 15 byte Id of the assigned Contact. Field to support PersonAccount migration and code refactoring</description>
        <formula>StudentContact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PersonContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlacementContactType__c</fullName>
        <description>Whether or not the student is allowed to contact the school or district to request placement.</description>
        <inlineHelpText>Whether or not the student is allowed to contact the school or district to request placement.</inlineHelpText>
        <label>Placement Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Student Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU Placement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryPhoneExtension__c</fullName>
        <label>Primary Phone Extension</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RaceEthnicityCategory__c</fullName>
        <label>Race/Ethnicity Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReverseArticulation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field used to indicate if the transfer institution has a reverse articulation agreement with WGU.</description>
        <label>Reverse Articulation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScholarshipExists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the business or institution provides a scholarship for its employees or members.</description>
        <inlineHelpText>Specifies if the business or institution provides a scholarship for its employees or members.</inlineHelpText>
        <label>Scholarship Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SchoolAccreditation__c</fullName>
        <description>Text describing accreditation of school</description>
        <label>School Accreditation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SchoolAccreditingOrganization__c</fullName>
        <description>The accrediting organization of a K-12 school</description>
        <label>School Accrediting Organization</label>
        <picklist>
            <picklistValues>
                <fullName>AAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdvancED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AISNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIMS-MD/DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCCPSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSAIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFNSSAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIPSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NLSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYSAIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCDNPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SchoolDistrict__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>District to which the school is related</description>
        <label>School District</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Schools</relationshipLabel>
        <relationshipName>SchoolDistrict</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SchoolLevel__c</fullName>
        <label>School Level</label>
        <picklist>
            <picklistValues>
                <fullName>1-Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Middle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SchoolType__c</fullName>
        <label>School Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular elementary and secondary schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private elementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private middle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private K-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University or college</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondaryEmail__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>StudentContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the actual Contact record for dereferencing the complete set of Contact fields in formulas and validations</description>
        <inlineHelpText>The student contact field is set automatically when the account record is created or updated</inlineHelpText>
        <label>Student Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Contact</relationshipLabel>
        <relationshipName>StudentContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TitleIEligibleSchool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title I Eligible School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalAllGradesFemale__c</fullName>
        <label>Total All Grades - Female</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAllGradesMale__c</fullName>
        <label>Total All Grades - Male</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>